--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Master Page</title>
+</head>
+<body>
+	<a href="/karaoke_quick.html">노래방 Quick View</a>
+</body>
+</html>
