--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Master Page</title>
+	<title>Master :: rsu3225ru</title>
 </head>
 <body>
-	<a href="/karaoke_quick.html">노래방 Quick View</a>
+	<a href="/karaoke_quick/index.html">노래방 Quick View</a>
 </body>
 </html>
