--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
 <head>
 	<title>Master :: rsu3225ru</title>
+	<link rel="stylesheet" type="text/css" href="default.css">
 </head>
-<body>
-	<a href="/karaoke_quick/index.html">노래방 Quick View</a>
+<body class="with_nav_expanded">
+	<ul class="nav_expanded">
+		<li><a href="/index.html">Main</a></li>
+		<li><a href="/karaoke_quick/index.html">노래방 Quick View</a></li>
+	</ul>
 </body>
 </html>
