--- a/karaoke_quick/index.html
+++ b/karaoke_quick/index.html
@@ -3,10 +3,16 @@
 <head>
 	<meta charset="utf-8">
 	<title>노래방 Quick View :: rsu3225ru</title>
+	<link rel="stylesheet" type="text/css" href="/default.css">
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.10.0/js/md5.min.js"></script>
 </head>
-<body>
+<body class="with_nav_bar">
+	<ul class="nav_bar">
+		<li><a href="/index.html">Main</a></li>
+		<li><a href="/karaoke_quick/index.html">노래방 Quick View</a></li>
+	</ul>
+	<div class="main"></div>
 	<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
